--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "bower": "^1.8.0",
+    "chai": "^3.5.0",
     "css-loader": "^0.26.1",
     "eslint": "^3.14.1",
     "eslint-plugin-react": "^6.9.0",
     "jsdoc": "^3.4.3",
+    "mocha": "^3.2.0",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
+    "travis": "^0.1.1",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2",
     "webpack-sass-loader": "^2.2.1"
