--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "serve": "webpack-dev-server --progress --colors",
     "help": "webpack --help --color",
     "bower": "bower",
-    "doc": "jsdoc app -r -c ./conf.json -d docs"
+    "doc": "jsdoc app -r -c ./conf.json -d docs",
+    "test": "NODE_ENV=testing karma start"
   },
   "dependencies": {
     "firebase": "^3.6.9",
@@ -29,8 +30,17 @@
     "eslint": "^3.14.1",
     "eslint-plugin-react": "^6.9.0",
     "jsdoc": "^3.4.3",
+    "karma": "^1.5.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-safari-launcher": "^1.0.0",
+    "karma-webpack": "^2.0.2",
     "mocha": "^3.2.0",
+    "mocha-loader": "^1.1.1",
     "sass-loader": "^4.1.1",
+    "sinon": "^1.17.7",
     "style-loader": "^0.13.1",
     "travis": "^0.1.1",
     "webpack": "^1.14.0",
