--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.17.1",
     "ramda": "^0.23.0",
     "value-event": "^5.1.1",
+    "vdom-query": "^0.0.1",
     "virtual-dom": "^2.1.1"
   },
   "devDependencies": {
