--- a/package.json
+++ b/package.json
@@ -1,41 +1,48 @@
 {
   "name": "js-tutorial-setup",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "scripts": {
-    "serve": "webpack-dev-server --progress --colors",
+    "build": "webpack --progress --colors",
+    "serve": "webpack-dev-server --progress --colors --hot",
+    "watch": "webpack --progress --colors --watch",
     "help": "webpack --help --color",
-    "bower": "bower",
-    "doc": "jsdoc app -r -c ./conf.json -d docs"
-  },
-  "dependencies": {
-    "firebase": "^3.6.9",
-    "moment": "^2.17.1",
-    "ramda": "^0.23.0",
-    "value-event": "^5.1.1",
-    "vdom-query": "^0.0.1",
-    "virtual-dom": "^2.1.1"
+    "bower": "bower"
   },
   "devDependencies": {
-    "babel-cli": "^6.22.2",
+    "autoprefixer": "^6.7.7",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-react-jsx": "^6.22.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
-    "bower": "^1.8.0",
-    "css-loader": "^0.26.1",
-    "eslint": "^3.14.1",
-    "eslint-plugin-react": "^6.9.0",
-    "jsdoc": "^3.4.3",
-    "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2",
-    "webpack-sass-loader": "^2.2.1"
+    "babel-plugin-transform-exponentiation-operator": "^6.22.0",
+    "babel-plugin-transform-react-jsx": "^6.23.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "bootstrap": "^3.3.7",
+    "bootstrap-sass": "^3.3.7",
+    "css-loader": "^0.27.3",
+    "exports-loader": "^0.6.4",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.1",
+    "font-awesome-loader": "^1.0.2",
+    "imports-loader": "^0.7.1",
+    "node-sass": "^4.5.0",
+    "postcss-loader": "^1.3.3",
+    "precss": "^1.4.0",
+    "resolve-url-loader": "^2.0.2",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.14.1",
+    "tether": "^1.4.0",
+    "url-loader": "^0.5.8",
+    "virtual-dom": "^2.1.1",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.3.0",
+    "webpack-hot-middleware": "^2.17.1"
   },
-  "engines": {
-    "node": ">=0.10.0"
+  "dependencies": {
+    "babel-polyfill": "^6.23.0",
+    "bootstrap-loader": "^2.0.0",
+    "firebase": "^3.7.4",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.2.1",
+    "moment": "^2.18.1",
+    "ramda": "^0.23.0"
   }
 }
