--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-exponentiation-operator": "^6.22.0",
     "babel-plugin-transform-react-jsx": "^6.23.0",
+    "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-0": "^6.22.0",
     "bootstrap": "^3.3.7",
     "bootstrap-sass": "^3.3.7",
